# BraTS

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  run.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: tests.yml
brats/: __init__.py  algorithm_config.py  algorithms.py  algorithms.yml  brats_algorithm.py  constants.py  data.py  docker.py  exceptions.py  inferer.py  inpainting_algorithms.py  logging.py  preprocessing.py  segmentation_algorithms.py  utils.py  weights.py
brats/algorithms/: adult_glioma.yml  adult_glioma_segmentation_algorithms.yml  africa.yml  meningioma.yml  meningioma_segmentation_algorithms.yml  metastases.yml  pediatric.yml  pediatric_segmentation_algorithms.yml
brats/algorithms/meta/: inpainting.yml
brats/algorithms/parameters/: brats23_africa_sparkunn.yml
brats/core/: brats_algorithm.py  docker.py  inpainting_algorithms.py  kubernetes.py  missing_mri_algorithms.py  segmentation_algorithms.py  singularity.py
brats/data/meta/: adult_glioma.yml  adult_glioma_post_op.yml  adult_glioma_post_treatment.yml  adult_glioma_pre_and_post_treatment.yml  adult_glioma_pre_op.yml  adult_glioma_pre_treatment.yml  africa.yml  goat.yml  inpainting.yml  meningioma.yml  meningioma_rt.yml  metastases.yml  missing_mri.yml  pediatric.yml
brats/data/parameters/: brats23_inpainting_domaso.yml  brats23_missing_mri_onembyte.yml  brats24_adult_glioma_mist.yml  brats24_inpainting_smint.yml  brats24_missing_mri_cgv.yml
brats/utils/: algorithm_config.py  constants.py  data_handling.py  exceptions.py  logging.py  zenodo.py
docs/source/: algorithms.rst  conf.py  constants.rst  index.rst  readme.rst
docs/source/core/: brats_algorithm.rst  core.rst  inpainting_algorithms.rst  missing_mri_algorithms.rst  segmentation_algorithms.rst
docs/source/utils/: logging.rst  utils.rst
tests/: test_algorithm_config.py  test_dummy.py  test_logging.py  test_utils.py  test_utils_data_handling.py
tests/core/: test_brats_algorithm.py  test_docker.py  test_inpainting_algorithms.py  test_kubernetes.py  test_missing_mri_algorithms.py  test_segmentation_algorithms.py  test_singularity.py
tests/utils/: test_algorithm_config.py  test_data_handling.py  test_logging.py  test_zenodo.py
