[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable = true

[tool.poetry]
name = "brats"
version = "0.0.0"
description = "BraTS algorithms"
authors = [
  "Marcel Rosier <marcel.rosier@tum.de>",
  "Florian Kofler <florian.kofler@tum.de>",
]

license = "AGPL-3.0"
readme = "README.md"
repository = "https://github.com/BrainLesion/BraTS"
homepage = "https://github.com/BrainLesion/BraTS"
documentation = "https://brats.readthedocs.io/en/latest/"

keywords = [
  "brain tumor",
  "glioma",
  "BraTS",
  "brain lesion",
  "segmentation",
  "synthesis",
  "inpainting"
]

# Add the exclude field directly under [tool.poetry]
exclude = [
  "tests",       # Test files
  "docs",        # Documentation files
  ".github",     # GitHub workflows, actions, etc.
]

[tool.poetry.dependencies]
python = ">=3.8"
docker = ">=7.0.0"
rich = ">=13.0.0"
PyYAML = ">=6.0.1"
dacite = ">=1.8.0"
loguru = ">=0.7.0"
nibabel = ">=5.0.0"

[tool.poetry.dev-dependencies]
pytest = ">=8.0.0"
pytest-cov = ">=5.0.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
Sphinx  = ">=7.0.0"
sphinx-copybutton = ">=0.5.2"
sphinx-rtd-theme = ">=1.3.0"
myst-parser = ">=2.0.0"