[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable = true

[tool.poetry]
exclude = [
  "tests",   # Test files
  "docs",    # Documentation files
  "figures", # Figures and images
  ".github", # GitHub workflows, actions, etc.
]

[project]
name = "brats"
version = "0.0.0.dev"
description = "BraTS algorithms"
authors = [
  { name = "Marcel Rosier", email = "marcel.rosier@tum.de" },
  { name = "Florian Kofler", email = "florian.kofler@tum.de" },
]

readme = "README.md"
requires-python = "^3.8"
license = "Apache-2.0"
keywords = [
  "brain tumor",
  "glioma",
  "BraTS",
  "brain lesion",
  "segmentation",
  "synthesis",
  "inpainting",
]

dependencies = [
  "spython>=0.3.14",
  "docker>=7.0.0",
  "rich>=13.0.0",
  "PyYAML>=6.0.1",
  "dacite>=1.8.0",
  "loguru>=0.7.0",
  "nibabel>=5.0.0",
  "numpy>=1.21.0; python_version<='3.9'",
  "numpy>=1.26.0; python_version>='3.10'",
]

[project.optional-dependencies]
preprocessing = ["brainles_preprocessing>=0.6.7; python_version >= '3.10'"]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
pytest-cov = ">=5.0.0"
flake8 = ">=5.0.0"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
Sphinx = ">=7.0.0"
sphinx-copybutton = ">=0.5.2"
furo = ">=2024.8.6"
myst-parser = ">=2.0.0"
